Cassandra Assets: improve examples and had astra-keyspace asset (#375)